# ImmuneMethylTools

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  TECHNICAL_GUIDE.md  config.json  pyproject.toml  requirements.txt  setup.sh  tldr_readme.md
core/: __init__.py  config_loader.py  deconvolution.py  dmr_hunter.py  io_utils.py  ml_guard.py  normalizer.py  pipeline.py  qc_guard.py  repertoire_clonality.py  report_gen.py  sample_audit.py  visuals.py  xci_guard.py
core/analytics/: __init__.py  deconvolution.py  dmr_hunter.py  ml_guard.py  normalizer.py
core/infrastructure/: __init__.py  io_utils.py  report_gen.py  visuals.py
core/orchestration/: __init__.py  config_loader.py  pipeline.py
core/qc/: __init__.py  qc_guard.py  repertoire_clonality.py  sample_audit.py  xci_guard.py
data/: generate_mock_data.py
notebooks/: ImmuneMethylTools_Validation.ipynb
prompts/: 01_initial_spec.md  LOG.md  full_spec.md
tests/: test_core_integration.py  test_io_utils_and_pipeline.py  test_mock_data.py  test_phase3_modules.py
